--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,18 @@
         android:theme="@style/Theme.SHF"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ExerciseListActivity"
             android:exported="true"
             android:theme="@style/Theme.SHF">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SessionActivity"
+            android:exported="true"
+            android:theme="@style/Theme.SHF">
         </activity>
     </application>
 
