--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity
             android:name=".SessionActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.SHF">
         </activity>
     </application>
