--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
+        compose_navigation_version = '2.5.0-rc01'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
