--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
         compose_navigation_version = '2.5.0-rc01'
+        ext.hilt_version = '2.40'
+        dependencies {
+            classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        }
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
