--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        ndk.debugSymbolLevel = 'FULL'
     }
 
     buildTypes {
