--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "com.google.dagger:hilt-android:2.46.1"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-service:2.6.1'
     kapt "com.google.dagger:hilt-android-compiler:2.46.1"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
