--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,16 +61,16 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'androidx.navigation:navigation-compose:2.6.0'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
-    implementation "com.google.dagger:hilt-android:2.46.1"
+    implementation 'com.google.dagger:hilt-android:2.47'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-service:2.6.1'
-    kapt "com.google.dagger:hilt-android-compiler:2.46.1"
+    kapt 'com.google.dagger:hilt-android-compiler:2.47'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation('io.coil-kt:coil-compose:2.4.0')
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
