--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".SHFApplication"
+        android:name=".app.SHFApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.SHF"
         tools:targetApi="33">
         <activity
-            android:name=".SHFActivity"
+            android:name=".app.SHFActivity"
             android:exported="true"
             android:theme="@style/Theme.SHF">
             <intent-filter>
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".background.BackgroundKeyEventService"
+        <service android:name=".app.KeyLoggingService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
             android:exported="false">
             <intent-filter>
@@ -36,7 +36,7 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        <service android:name=".background.notifications.BackgroundNotificationService" />
+        <service android:name=".app.notifications.BackgroundNotificationService" />
     </application>
 
 </manifest>
