--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "dev.upaya.shf"
         minSdk 33
-        targetSdk 33
+        targetSdk 34
         versionCode 7
         versionName '0.2.0'
 
@@ -55,14 +55,14 @@ dependencies {
 
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material:material:1.4.3'
+    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation 'com.google.dagger:hilt-android:2.47'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
