--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,10 @@ android {
 
     defaultConfig {
         applicationId "dev.upaya.shf"
-        minSdk 33
+        minSdk 27
         targetSdk 34
-        versionCode 10
-        versionName '0.2.2'
+        versionCode 11
+        versionName '0.2.3'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -58,15 +58,15 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    implementation 'androidx.navigation:navigation-compose:2.7.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+    implementation 'androidx.navigation:navigation-compose:2.7.3'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation 'com.google.dagger:hilt-android:2.47'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-service:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-service:2.6.2'
     kapt 'com.google.dagger:hilt-android-compiler:2.47'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -85,5 +85,5 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.1"
 }
