--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,22 @@
 buildscript {
     ext {
         compose_version = '1.5.0'
-        dependencies {
-            classpath "com.google.dagger:hilt-android-gradle-plugin:2.47"
-        }
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.47"
+        classpath 'com.google.gms:google-services:4.4.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+    }
+}
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.1.2' apply false
-    id 'com.android.library' version '8.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.gms.google-services' version '4.3.15' apply false
+    id 'com.android.application' version '8.1.3' apply false
+    id 'com.android.library' version '8.1.3' apply false
     id 'com.google.firebase.crashlytics' version "2.9.8" apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
 }
 
 tasks.register('clean', Delete) {
