--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
@@ -41,7 +41,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.1"
+        kotlinCompilerExtensionVersion = "1.5.10"
     }
     packagingOptions {
         resources {
@@ -67,7 +67,14 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.49'
     implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
     implementation 'androidx.lifecycle:lifecycle-service:2.7.0'
-    kapt 'com.google.dagger:hilt-android-compiler:2.47'
+    implementation 'androidx.test:core-ktx:1.5.0'
+    ksp 'com.google.dagger:hilt-android-compiler:2.47'
+
+    implementation("androidx.room:room-runtime:2.6.1")
+    annotationProcessor("androidx.room:room-compiler:2.6.1")
+    ksp("androidx.room:room-compiler:2.6.1")
+    implementation("androidx.room:room-ktx:2.6.1")
+    testImplementation("androidx.room:room-testing:2.6.1")
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation('io.coil-kt:coil-compose:2.4.0')
