--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf-ktx'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.tngtech.archunit:archunit:1.2.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
