--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,9 +82,10 @@ dependencies {
     implementation('io.coil-kt:coil-compose:2.4.0')
 
     implementation platform('com.google.firebase:firebase-bom:33.0.0')
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-config'
+    implementation 'com.google.firebase:firebase-perf'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.tngtech.archunit:archunit:1.2.1'
